fixed popup dark mode

--- a/frontend/src/Components/Deck/Deck.css
+++ b/frontend/src/Components/Deck/Deck.css
@@ -1,6 +1,6 @@
 .deck {
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--section-border);
     border-radius: 10px;
     box-shadow: 0px 4px 6px var(--box-shadow);
     position: relative;
@@ -53,7 +53,7 @@
     position: absolute;
     top: 40px;
     left: 0;
-    background: white;
+    background: var(--deck-dropdown);
     border: 1px solid var(--section-border);
     border-radius: 5px;
     box-shadow: 0px 4px 6px var(--box-shadow);
