--- a/frontend/src/Components/Navbar/Avatar/AvatarPopup/AvatarPopup.css
+++ b/frontend/src/Components/Navbar/Avatar/AvatarPopup/AvatarPopup.css
@@ -2,8 +2,8 @@
     position: absolute;
     top: 55px;
     left: -25vh;
-    background: white;
-    border: 1px solid #ccc;
+    background: var(--popup-background);
+    border: 1px solid var(--section-border);
     border-radius: 8px;
     box-shadow: 0 4px 10px var(--box-shadow);
     padding: 10px;
